--- a/forex-mtl/src/main/resources/application.conf
+++ b/forex-mtl/src/main/resources/application.conf
@@ -1,8 +1,15 @@
 app {
   http {
     host = "0.0.0.0"
-    port = 8080
+    port = 9000
     timeout = 40 seconds
+  }
+}
+
+forex-client {
+  api {
+    base-url = "http://localhost:8080/rates"
+    token = "10dc303535874aeccc86a8251e6992f5"
   }
 }
 
