Added a cache that initializes when the server starts. The cache expires after a set period and automatically refreshes with new data. Changes: - Implemented caching mechanism - Added a cron job to refresh the cache

--- a/forex-mtl/src/main/resources/application.conf
+++ b/forex-mtl/src/main/resources/application.conf
@@ -17,3 +17,18 @@ auth {
     token: "valid-token"
 }
 
+cache-service {
+  rates-cache {
+    expire-after-write-minutes = 5
+    maximum-size = 1000
+  }
+
+  resource-server-cache {
+    expire-after-write-days = 1
+    maximum-size = 500
+  }
+}
+
+cron {
+    time = 50
+}
