Update before submit Changes: - Change the logic to fetch the data and add the test. - Add readme - Add the client timeout.

--- a/forex-mtl/src/main/resources/docker-application.conf
+++ b/forex-mtl/src/main/resources/docker-application.conf
@@ -2,7 +2,10 @@ app {
   http {
     host = "0.0.0.0"
     port = 9000
-    timeout = 2 seconds
+    timeout = 10 seconds
+  }
+  client {
+    timeout = 3000
   }
 }
 
@@ -19,16 +22,11 @@ auth {
 
 cache-service {
   rates-cache {
-    expire-after-write-minutes = 5
+    expire-after-write-milliseconds = 270000
     maximum-size = 1000
-  }
-
-  resource-server-cache {
-    expire-after-write-days = 1
-    maximum-size = 500
   }
 }
 
 cron {
-    time = 3
+    time = 2
 }
